--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Four card feature section</title>
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./Styles/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet"> 
 </head>
